# solar-car-mppt

python-scripts/: pyproject.toml
python-scripts/power_flows/: power_calculator.py
python-scripts/power_flows/component/: __init__.py  bus.py  converter.py
python-scripts/programs/boost_converter/: battery.py  boost_calculator.py  solar_panel.py  test.py
python-scripts/programs/boost_converter_values/: calculateValues.py
python-scripts/programs/power_flows/: power_calculator.py
python-scripts/programs/power_flows/component/: solar_array.py
