[project]
name = "python-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
power-calc = "programs.power_flows.power_calculator:main"
boost-val-calc = "programs.boost_converter.test:main"

[tool.uv]
package = true
